# eget

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: commitlint.config.cjs
.github/workflows/: build.yml
docs/specs/: eget.md
misc/: regenerate_fixtures.py
src/: archive.rs  cli.rs  compat.rs  db.rs  installer.rs  lib.rs  main.rs  manifest.rs  model.rs  policy.rs  scope.rs  source.rs  template.rs
tests/: archive_fixtures.rs  exec_flow.rs  executable_fixtures.rs  install_flow.rs  scope_flow.rs
tests/fixtures/archives/: absolute.tar  conflicting-duplicate.tar  dotdot.tar  encrypted.7z  fifo.tar  hardlink-escape.tar  safe.7z  safe.tar  safe.tar.bz2  safe.tar.xz  safe.tar.zst  single.bz2  single.xz  single.zst  symlink-child.tar  symlink-escape.7z
tests/fixtures/executables/: elf-aarch64-exec  elf-x86_64-exec  elf-x86_64-freebsd  elf-x86_64-missing-loader  elf-x86_64-pie  elf-x86_64-shared  elf-x86_64-static-pie  macho-arm64-dylib  macho-arm64-exec  macho-universal-exec  script-absolute  script-env
