[package]
name = "eget"
version = "0.0.1-alpha3"
edition = "2024"
license = "MIT"
description = "Install standalone executables from GitHub, Gitea, GitLab, and direct URLs"

[dependencies]
anyhow = "1.0"
bzip2 = "0.6"
clap = { version = "4.5", features = ["derive", "env"] }
data-encoding = "2.11"
flate2 = "1.1"
fs2 = "0.4"
indicatif = "0.18"
libc = "0.2"
object = { version = "0.37", features = ["read", "std"] }
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.11"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sevenz-rust2 = { version = "0.21", default-features = false, features = ["bzip2", "deflate", "ppmd", "zstd"] }
tar = "0.4"
tempfile = "3.20"
url = "2.5"
walkdir = "2.5"
xz2 = { version = "0.1", features = ["static"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = { version = "4.3", default-features = false, features = ["deflate", "bzip2", "zstd"] }
zstd = "0.13"

[dev-dependencies]
hex = "0.4"
sha2 = "0.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
